syntax = "proto3";
option go_package = "Open_IM/pkg/proto/cache;cache";
package cache;

message CommonResp{
  int32  errCode = 1;
  string errMsg = 2;
}

message GetFriendIDListFromCacheReq {
  string userID = 1;
  string operationID = 2;
}

message GetFriendIDListFromCacheResp {
  repeated string userIDList = 1;
  CommonResp commonResp = 2;
}

message DelFriendIDListFromCacheReq {
  string userID = 1;
  string operationID = 2;
}

message DelFriendIDListFromCacheResp {
   CommonResp commonResp = 1;
}

message GetBlackIDListFromCacheReq {
  string userID = 1;
  string operationID = 2;
}

message GetBlackIDListFromCacheResp {
  repeated string userIDList = 1;
  CommonResp commonResp = 2;
}

message DelBlackIDListFromCacheReq {
  string userID = 1;
  string operationID = 2;
}

message DelBlackIDListFromCacheResp {
  CommonResp commonResp = 1;
}

message GetGroupMemberIDListFromCacheReq {
  string operationID = 1;
  string groupID = 2;
}

message GetGroupMemberIDListFromCacheResp {
  CommonResp commonResp = 1;
  repeated string userIDList = 2;
}

message DelGroupMemberIDListFromCacheReq {
  string groupID = 1;
  string operationID = 2;
}

message DelGroupMemberIDListFromCacheResp {
  CommonResp commonResp = 1;
}

service cache{

  // friendInfo
  rpc GetFriendIDListFromCache(GetFriendIDListFromCacheReq) returns(GetFriendIDListFromCacheResp);

  // for dtm
  rpc DelFriendIDListFromCache(DelFriendIDListFromCacheReq) returns(DelFriendIDListFromCacheResp);

  // blackList
  rpc GetBlackIDListFromCache(GetBlackIDListFromCacheReq) returns(GetBlackIDListFromCacheResp);

  // for dtm
  rpc DelBlackIDListFromCache(DelBlackIDListFromCacheReq) returns (DelBlackIDListFromCacheResp);

  // group
  rpc GetGroupMemberIDListFromCache(GetGroupMemberIDListFromCacheReq) returns(GetGroupMemberIDListFromCacheResp);

  // for dtm
  rpc DelGroupMemberIDListFromCache(DelGroupMemberIDListFromCacheReq) returns(DelGroupMemberIDListFromCacheResp);
}


